(library
 (name harfbuzz)
 (public_name harfbuzz)
 (js_of_ocaml
  (javascript_files harfbuzz.js))
 (library_flags
  (:include flags.sexp))
 (foreign_stubs
  (language c)
  (flags
   (:include c_flags.sexp)))
 (foreign_stubs
  (language cxx)
  (flags
   (:include cxx_flags.sexp))
  (names harfbuzz)))

(rule
 (targets c_flags.sexp cxx_flags.sexp flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
