(library
    (name harfbuzz)
    (public_name harfbuzz)
    (js_of_ocaml (javascript_files harfbuzz.js))
    (cxx_names harfbuzz)
    (library_flags (:include flags.sexp))
    (c_flags (:include c_flags.sexp))
    (cxx_flags (:include cxx_flags.sexp)))

(rule
    (targets c_flags.sexp cxx_flags.sexp flags.sexp)
    (deps (:discover config/discover.exe))
    (action (run %{discover})))
